# NLP_Intro

./: LICENSE  poetry.md  pyproject.toml  tools.md
notebooks/: Intro.ipynb
notebooks/exercises/: exercise_1_solved.ipynb  exercise_2.ipynb  rag.ipynb
notebooks/exercises /: excersise_1.ipynb
